--- a/app/views/pages/add_to_slack.html.erb
+++ b/app/views/pages/add_to_slack.html.erb
@@ -1,7 +1,16 @@
 <% unless @view.user_signed_in? %>
-<div class="container">
-  <div class="navbar" role="navigation">
-    <div class="container">
+
+  <nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle"
+              data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav pull-right" style="font-weight: 900;">
         <li><a href="#" class="brand"><u>Product</u></a></li>
         <li><a href="#" class="brand"><u>FAQ</u></a></li>
@@ -9,7 +18,10 @@
         <li><a href="#" class="brand"><u>Contact Us</u></a></li>
       </ul>
     </div>
-  </div>
+    </div>
+  </nav>
+
+<div class="container">
 
   <div class="row text-center">
     <h1><a href="<%= new_user_session_path %>"
