--- a/app/views/pages/add_to_slack.html.erb
+++ b/app/views/pages/add_to_slack.html.erb
@@ -125,7 +125,7 @@
     <br><br>
   </div>
   <br>
-  <p class="text-center" style="color: grey; padding-bottom: 234px;">
+  <p class="css-page-footer text-center" style="color: grey;">
     Copyright 2016 yaddayadda All Rights Reserved
   <p>
 
