--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -106,10 +106,9 @@
     <br><br>
   </div>
   <br>
-  <p class="text-center" style="color: grey; padding-bottom: 180px;">
+  <p class="css-page-footer text-center" style="color: grey;">
     Copyright 2016 yaddayadda All Rights Reserved
   <p>
-  <br><br><br><br><br>
 </div>
 
 <% else %>
