--- a/app/views/pages/add_to_slack.html.erb
+++ b/app/views/pages/add_to_slack.html.erb
@@ -70,7 +70,7 @@
     <h4><p class="text-center" style="font-weight: 900;">Miado commands</p></h4>
   </div>
   <div class="row" style="background-color: LightCyan; color: Blue; padding-bottom: 20px;">
-    <div class="col-sm-8 col-sm-offset-2 text-left">
+    <div class="col-sm-8 col-sm-offset-2 well text-left">
       <strong>/do rev 1 spec @susan /jun15</strong>
       &nbsp;&nbsp;&nbsp;&nbsp;Adds "rev 1spec" task to this channel, assigns it to Susan, due date is June 15.
       <br>
@@ -111,8 +111,8 @@
   </div>
 
   <div id="contact_us" class="row"
-       style="padding-top:40px; background-color: Beige; color: grey;">
-    <div class="col-sm-8 col-sm-offset-2">
+       style="padding-top:40px; padding-bottom: 20px; background-color: Beige; color: grey;">
+    <div class="col-sm-8 col-sm-offset-2 well">
       <form name="comments" role="form" data-toggle="validator" method="post" action="/comments">
         <h4><p class="text-center" style="font-weight: 900;">Have a question?<p></h4>
         <br>
@@ -136,13 +136,27 @@
         </div>
       </form>
     </div>
-    <br><br>
   </div>
 
-  <br>
-  <p class="css-page-footer text-center" style="color: grey;">
-    Copyright 2016 yaddayadda All Rights Reserved
-  <p>
+  <div class="row text-center">
+    <div class="col-sm-12" style="padding-top:20px;" >
+      <p>
+        <a href="<%= new_user_registration_path(oauth: 'slack') %>">
+          <img alt="Add to Slack" height="60" width="200"
+               src="https://platform.slack-edge.com/img/add_to_slack.png"
+               srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" />
+        </a>
+      </p>
+    </div>
+  </div>
+
+  <div class="row text-center">
+    <div class="col-sm-12" style="padding-top:60px;" >
+      <p style="color: grey;">
+        Copyright 2016 Ray Novarina All Rights Reserved
+      <p>
+    </div>
+  </div>
 
 </div>
 
