--- a/app/views/pages/add_to_slack.html.erb
+++ b/app/views/pages/add_to_slack.html.erb
@@ -65,12 +65,13 @@
   </div>
 
   <br>
-  <div class="row" style="background-color: LightCyan; color: Blue">
+  <div class="row" style="background-color: #F3F9FB; color: #0E87FC">
     <br>
     <h4><p class="text-center" style="font-weight: 900;">Miado commands</p></h4>
   </div>
-  <div class="row" style="background-color: LightCyan; color: Blue; padding-bottom: 20px;">
-    <div class="col-sm-8 col-sm-offset-2 well text-left">
+  <div class="row" style="background-color: #F3F9FB; color: #0E87FC; padding-bottom: 20px;">
+    <div class="col-sm-8 col-sm-offset-2 well text-left"
+         style="background-color: #F3F9FB; box-shadow: 0 2px 2px 0 rgba(0, 0, 255, .14), 0 3px 1px -2px rgba(0, 0, 255, .2), 0 1px 5px 0 rgba(0, 0, 255, .12)">
       <strong>/do rev 1 spec @susan /jun15</strong>
       &nbsp;&nbsp;&nbsp;&nbsp;Adds "rev 1spec" task to this channel, assigns it to Susan, due date is June 15.
       <br>
@@ -103,7 +104,7 @@
       <br>
       <span class="glyphicon glyphicon-star"></span>
       <span style="color:grey">
-        <strong>Click on your <span style="color:blue">taskbot</span> to see all of your up-to-date lists.
+        <strong>Click on your <span style="color:#0E87FC">taskbot</span> to see all of your up-to-date lists.
         </strong>
       </span>
       &nbsp;&nbsp;&nbsp;&nbsp;<strong>[<a href="/about#faq" class="brand"><u>More</u></a>...]</strong>
@@ -111,8 +112,9 @@
   </div>
 
   <div id="contact_us" class="row"
-       style="padding-top:40px; padding-bottom: 20px; background-color: Beige; color: grey;">
-    <div class="col-sm-8 col-sm-offset-2 well">
+       style="padding-top:40px; padding-bottom: 20px; background-color: #FBFBE6; color: #7F7F7F;">
+    <div class="col-sm-8 col-sm-offset-2 well"
+         style="background-color: #FBFBE6; box-shadow: 0 2px 2px 0 rgba(0, 255, 255, .14), 0 3px 1px -2px rgba(0, 255, 255, .2), 0 1px 5px 0 rgba(0, 255, 255, .12)">
       <form name="comments" role="form" data-toggle="validator" method="post" action="/comments">
         <h4><p class="text-center" style="font-weight: 900;">Have a question?<p></h4>
         <br>
@@ -152,8 +154,8 @@
 
   <div class="row text-center">
     <div class="col-sm-12" style="padding-top:60px;" >
-      <p style="color: grey;">
-        Copyright 2016 Ray Novarina All Rights Reserved
+      <p style="color: #7F7F7F;">
+        Copyright 2016 Ray Novarina. All Rights Reserved
       <p>
     </div>
   </div>
