--- a/app/views/pages/add_to_slack.html.erb
+++ b/app/views/pages/add_to_slack.html.erb
@@ -103,7 +103,7 @@
       &nbsp;&nbsp;&nbsp;&nbsp;Lists all TEAM tasks that are OPEN for ALL channels.
       <br>
       <span class="glyphicon glyphicon-star"></span>
-      <span style="color:grey">
+      <span style="color: #7F7F7F">
         <strong>Click on your <span style="color:#0E87FC">taskbot</span> to see all of your up-to-date lists.
         </strong>
       </span>
