--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -105,22 +105,29 @@
       <div class="media">
         <div class="media-left">
           <%= image_tag 'photo-1.jpg', class: 'media-object', size: '140x140', style: 'border: 2px solid brown;' %>
+        </div>
+        <div class="media-body" style="overflow: visible;">
+          <h3 class="media-heading" style="font-weight: 900; padding-bottom: 10px;">About Me</h3>
+          Hi, i'm Ray and i don't like to promote myself. But enough about me.
           <ul class="nav" style="font-weight: 900;">
             <li><a href="https://www.linkedin.com/in/raynovarina" class="brand"><u>LinkedIn</u></a></li>
             <li><a href="https://github.com/RayNovarina/" class="brand"><u>GitHub</u></a></li>
           </ul>
         </div>
+        <p>
         <div class="media-body" style="overflow: visible;">
-          <h3 class="media-heading" style="font-weight: 900; padding-bottom: 10px;">About Me</h3>
-          Hi, i'm Ray and i don't like to promote myself. But enough about me. I initially wrote
-          MiaDo as a simple learning exercise for integrating Ruby on Rails and an API. My wife is
-          a marketing consultant and uses Slack to manage communications within small teams. By small,
-          I mean "micro teams" of 2-5 people, mostly startups.
-          Line 2 adfadsf ads f df adf adf f adf d fdsaf ad fdfdaf df adf adsfa fdf adfa df fdfadsf
-          Line 1 adfdasf adf asd asdf adf asd fasd fasd fad f sadfad sfd fads fas dfasdf asdf  asdf
-          Line 2 adfadsf ads f df adf adf f adf d fdsaf ad fdfdaf df adf adsfa fdf adfa df fdfadsf
-          Line 1 adfdasf adf asd asdf adf asd fasd fasd fad f sadfad sfd fads fas dfasdf asdf  asdf
-          Line 2 adfadsf ads f df adf adf f adf d fdsaf ad fdfdaf df adf adsfa fdf adfa df fdfadsf
+          <span class="media-heading" style="font-weight: 900;">About MiaDo:&nbsp;</span>
+            I initially wrote
+            MiaDo as a simple learning exercise for integrating Ruby on Rails and an API. My wife is
+            a marketing consultant and uses Slack to manage communications within small teams. By small,
+            I mean "micro teams" of 2-5 people, mostly startups.
+            Line 2 adfadsf ads f df adf adf f adf d fdsaf ad fdfdaf df adf adsfa fdf adfa df fdfadsf
+            Line 1 adfdasf adf asd asdf adf asd fasd fasd fad f sadfad sfd fads fas dfasdf asdf  asdf
+            Line 2 adfadsf ads f df adf adf f adf d fdsaf ad fdfdaf df adf adsfa fdf adfa df fdfadsf
+            Line 1 adfdasf adf asd asdf adf asd fasd fasd fad f sadfad sfd fads fas dfasdf asdf  asdf
+            Line 2 adfadsf ads f df adf adf f adf d fdsaf ad fdfdaf df adf adsfa fdf adfa df fdfadsf
+          </div>
+          </p>
         </div>
       </div>
     </div>
