[WIP]18.about page: More content in about me section.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -108,25 +108,30 @@
         </div>
         <div class="media-body" style="overflow: visible;">
           <h3 class="media-heading" style="font-weight: 900; padding-bottom: 10px;">About Me</h3>
-          Hi, i'm Ray and i don't like to promote myself. But enough about me.
           <ul class="nav" style="font-weight: 900;">
             <li><a href="https://www.linkedin.com/in/raynovarina" class="brand"><u>LinkedIn</u></a></li>
             <li><a href="https://github.com/RayNovarina/" class="brand"><u>GitHub</u></a></li>
           </ul>
         </div>
-        <p>
-        <div class="media-body" style="overflow: visible;">
-          <span class="media-heading" style="font-weight: 900;">About MiaDo:&nbsp;</span>
-            I initially wrote
-            MiaDo as a simple learning exercise for integrating Ruby on Rails and an API. My wife is
-            a marketing consultant and uses Slack to manage communications within small teams. By small,
-            I mean "micro teams" of 2-5 people, mostly startups.
-            Line 2 adfadsf ads f df adf adf f adf d fdsaf ad fdfdaf df adf adsfa fdf adfa df fdfadsf
-            Line 1 adfdasf adf asd asdf adf asd fasd fasd fad f sadfad sfd fads fas dfasdf asdf  asdf
-            Line 2 adfadsf ads f df adf adf f adf d fdsaf ad fdfdaf df adf adsfa fdf adfa df fdfadsf
-            Line 1 adfdasf adf asd asdf adf asd fasd fasd fad f sadfad sfd fads fas dfasdf asdf  asdf
-            Line 2 adfadsf ads f df adf adf f adf d fdsaf ad fdfdaf df adf adsfa fdf adfa df fdfadsf
-          </div>
+          <p style="overflow: visible;">
+            <h4>Hi, i'm Ray and i don't like to promote myself. So, enough about me.</h4>
+            <span class="media-heading" style="font-weight: 900;">About MiaDo:&nbsp;</span>
+              I initially wrote
+              MiaDo as a simple learning exercise for integrating Ruby on Rails and an API. My wife is
+              a marketing consultant and uses Slack to manage communications within small teams. By small,
+              I mean "micro teams" of 2-5 people, mostly startups. A particular problem for her was that
+              people were too busy or unwilling "to learn yet another" task manager. So the idea is that
+              one person is the adult who assigns and manages the tasks and the other team members just
+              need to simply click on the "tasbot" member to see an updated list of what to do. As a
+              person's assigned tasks changes, the tasbot list is redisplayed in its private channel with
+              a message waiting indicator. Always in one place, always up to date. As a 
+              programmer, this works for me too. I just want to easily see, via one click or touch,
+              what is currently on my todo list.
+          </p>
+          <p style="overflow: visible;">
+            <span class="media-heading" style="font-weight: 900;">About that name:&nbsp;</span>
+              So, the family dog's name is Mia, i'm Italian so "mia" is meaningful, there's a gazillion
+              "todo" apps out there, the domain name was available, so why not?
           </p>
         </div>
       </div>
