[WIP]18.about page: More content in the FAQ section.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -48,17 +48,18 @@
       <h2>Frequently Asked Questions</h2>
     </div>
     <div class="col-sm-12">
-      <p>Question one<br>
+      <p>Yet another todo list app. Why would this one be better for me?<br>
          Response
       </p>
     </div>
     <div class="col-sm-12">
-      <p>Question two<br>
-         Response
+      <p>How do i make a private "my todo list"?<br>
+         Miado is for team lists, private lists are not supported.
       </p>
     </div><div class="col-sm-12">
-      <p>Question three<br>
-         Response
+      <p>Is the taskbot channel read only or can i do more?<br>
+         Read only. Always your current task list. Perhaps setting a task as
+         completed (via '/do done' command) could be supported in the future.
       </p>
     </div><div class="col-sm-12">
       <p>What's the dog's head about?<br>
@@ -124,7 +125,7 @@
               one person is the adult who assigns and manages the tasks and the other team members just
               need to simply click on the "tasbot" member to see an updated list of what to do. As a
               person's assigned tasks changes, the tasbot list is redisplayed in its private channel with
-              a message waiting indicator. Always in one place, always up to date. As a 
+              a message waiting indicator. Always in one place, always up to date. As a
               programmer, this works for me too. I just want to easily see, via one click or touch,
               what is currently on my todo list.
           </p>
