[WIP]18.add2slack: moved domain to GoDaddy. Styled FAQ section a bit.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -43,26 +43,40 @@
     </p>
   </div>
 
-  <div id="faq" class="row text-center" style="padding-top:40px; font-weight: 900;">
+  <div id="faq" class="row text-center" style="padding-top:40px; padding-bottom: 10px; font-weight: 900;">
     <div class="col-sm-12">
       <h2>Frequently Asked Questions</h2>
     </div>
-    <div class="col-sm-12">
-      <p>Yet another todo list app. Why would this one be better for me?<br>
+  </div>
+  <div class="row">
+    <div class="col-sm-8 col-sm-offset-2 text-left"
+         style="background-color: #FFFFFF;">
+      <p>
+        <span style="font-weight: 500;">
+          Yet another todo list app. Why would this one be better for me?
+        </span><br>
          Response
       </p>
-    </div>
-    <div class="col-sm-12">
-      <p>How do i make a private "my todo list"?<br>
+
+      <p>
+        <span style="font-weight: 500;">
+          How do i make a private "my todo list"?
+        </span><br>
          Miado is for team lists, private lists are not supported.
       </p>
-    </div><div class="col-sm-12">
-      <p>Is the taskbot channel read only or can i do more?<br>
+
+      <p>
+        <span style="font-weight: 500;">
+          Is the taskbot channel read only or can i do more?
+        </span><br>
          Read only. Always your current task list. Perhaps setting a task as
          completed (via '/do done' command) could be supported in the future.
       </p>
-    </div><div class="col-sm-12">
-      <p>What's the dog's head about?<br>
+
+      <p>
+        <span style="font-weight: 500;">
+          What's the dog's head about?
+        </span><br>
          My dog Mia.
       </p>
     </div>
