[WIP]18.add2slack: Redo FAQ content.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -53,31 +53,33 @@
          style="background-color: #FFFFFF;">
       <p>
         <span style="font-weight: 500;">
-          Yet another todo list app. Why would this one be better for me?
+          Another way to manage the list of tasks I have to complete.  Why is this one better for me?
         </span><br>
-         Response
+          MiaDo was designed for teams with part-time members who don't want to learn a new app and especially,
+          for the admin member who has to track their tasks for them.
       </p>
 
       <p>
         <span style="font-weight: 500;">
-          How do i make a private "my todo list"?
+          How do I make a private list of tasks?
         </span><br>
-         Miado is for team lists, private lists are not supported.
+           MiaDo is for public lists, private lists are not supported.
       </p>
 
       <p>
         <span style="font-weight: 500;">
-          Is the taskbot channel read only or can i do more?
+          What does the TaskBot do?
         </span><br>
-         Read only. Always your current task list. Perhaps setting a task as
-         completed (via '/do done' command) could be supported in the future.
+          Your Taskbot will always display your current task list when you click on it.
+          It's "read-only" so you'll need to go to another channel to close or modify your tasks.
       </p>
 
       <p>
         <span style="font-weight: 500;">
           What's the dog's head about?
         </span><br>
-         My dog Mia.
+          The dog's head represents my dog Mia, who is often Missing In Action
+          (as were the post-it notes I used to track my to-dos on).
       </p>
     </div>
   </div>
